# small-data

./: .gitignore  README.md  fabfile.py
cpp/: CMakeLists.txt
cpp/cmake/: FindLibBSON.cmake
cpp/src/: DistinctiveTerms.cpp  DistinctiveTerms.h  Log.cpp  Log.h  Terms.cpp  Terms.h  Users.cpp  Users.h  main.cpp
data/: comments.bson  comments.metadata.json  users.txt
spark/: smalldata.sbt
spark/src/main/scala/: SmallData.scala
